<resources>
    <string name="app_name">LocMart</string>
    <string name="connection_error">Connection erorr</string>
    <string name="erorr">An erorr accurred</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="fragment_onboarding_next">Next</string>
    <string name="onboarding_title_0">Welcome to LokMart! \n Grocery Applications</string>
    <string name="onboarding_description_0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="onboarding_title_1">Best Quality and \n Fast Delivery!</string>
    <string name="onboarding_description_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="fragment_onboarding_get_started">Get Started</string>
    <string name="fragment_sign_in_sign_up">Sign Up</string>
    <string name="fragment_sign_in_no_account">Don’t have an account?</string>
    <string name="fragment_sign_in_forgot_password"><u>Forgot Password?</u></string>
    <string name="fragment_sing_in_button">Sign In</string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_username">Username</string>
    <string name="fragment_sign_in_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="fragment_sign_in_title">Welcome back</string>
    <string name="app_description">Grocery App</string>
    <string name="fragment_sign_up_title">Create your account</string>
    <string name="fragment_sign_up_email">Email</string>
    <string name="fragment_sign_up_register">Register</string>
    <string name="fragment_sign_up_terms_and_privacy">By tapping “Register” you accept our %s and %s</string>
    <string name="terms_of_use">terms of use</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="fragment_sign_up_have_account">Already have account?</string>
    <string name="fragment_sign_up_sign_in">Sign in</string>
    <string name="already_registered">This email is already registered</string>
    <string name="fragment_home_search">Search...</string>
    <string name="fragment_home_good_morning">Good morning.</string>
    <string name="fragment_home_categories">Categories</string>
    <string name="show_all">Show all</string>
    <string name="item_product_ratings_count">%d Ratings</string>
    <string name="fragment_item_product_discount">%d%% OFF</string>
    <string name="erorr_loading">An erorr accurred.</string>
    <string name="retry">Retry</string>
    <string name="fragment_home_greeting">Hello, %s</string>
    <string name="item_category_count">%d items</string>
    <string name="price">$%.1f</string>
    <string name="price_striked"><strike>$%.1f</strike></string>
    <string name="fragment_categories_title">Categories</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_search_recent">Recent Search</string>
    <string name="clear_all">Clear All</string>
    <string name="fragment_search_result">Search Result</string>
    <string name="fragment_filter_title">Filter Options</string>
    <string name="fragment_filter_reset">Reset</string>
    <string name="fragment_filter_range_title">sort by PRIce range</string>
    <string name="fragment_filter_rating_title">Sort by Rating</string>
    <string name="fragment_filter_one_two_stars">1-2 Stars</string>
    <string name="fragment_filter_two_three_stars">2-3 Stars</string>
    <string name="fragment_filter_three_four_stars">3-4 Stars</string>
    <string name="fragment_filter_four_five_stars">4-5 Stars</string>
    <string name="fragment_filter_discounts_title">Sort by discounts</string>
    <string name="fragment_filter_10_20_discount">10-20%</string>
    <string name="fragment_filter_25_50_discount">25-50%</string>
    <string name="fragment_filter_50_70_discount">50-70%</string>
    <string name="fragment_filter_70_above_discount">70% above</string>
    <string name="fragment_filter_discount">Discount</string>
    <string name="fragment_filter_others_title">Sort by others</string>
    <string name="fragment_filter_free_shipping">Free Shipping</string>
    <string name="fragment_filter_voucher">Voucher</string>
    <string name="fragment_filter_same_day_deli">Same Day Deli.</string>
    <string name="fragment_filter_categories_title">Sort by categories</string>
    <string name="fragment_filter_fresh_fruits">Fresh Fruits</string>
    <string name="fragment_filter_chicken">Chicken</string>
    <string name="fragment_filter_fresh_fish">Fresh Fish</string>
    <string name="fragment_filter_fresh_dairy">Fresh Dairy</string>
    <string name="fragment_filter_categories_error">Error fatching categories</string>
    <string name="fragment_filter_apply">Apply</string>

</resources>