<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="56dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/sign_in_background"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/locmart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_locmart"
        app:layout_constraintBottom_toTopOf="@id/app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/regular"
        android:text="@string/app_description"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locmart" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bold"
        android:text="@string/fragment_sign_in_title"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/regular"
        android:text="@string/fragment_sign_in_description"
        android:textColor="@color/soft_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/usernaemLayout"
        tools:layout_editor_absoluteX="32dp" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/usernaemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="18dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperTextEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/soft_gray"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:fontFamily="@font/medium"
            android:inputType="text"
            android:hint="@string/fragment_sign_in_username"
            android:textSize="16sp"
            android:paddingStart="45dp"
            android:textColor="@color/dark"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="29dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:fontFamily="@font/medium"
            android:hint="@string/fragment_sign_in_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:paddingStart="45dp"
            android:textColor="@color/dark"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/extra_bold"
        android:text="@string/fragment_sing_in_button"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/forgot"
        tools:layout_editor_absoluteX="32dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toTopOf="@+id/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/fragment_sign_in_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/fragment_sign_in_no_account"
        android:textColor="@color/soft_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:paddingHorizontal="6dp"
        android:paddingVertical="8dp"
        android:text="@string/fragment_sign_in_sign_up"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up_text" />


</androidx.constraintlayout.widget.ConstraintLayout>